# problemka_mtuci_backend

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: deploy-backend.yml
backend/: .env  .gitignore  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
backend/docker/: docker-compose.local.yml
backend/k8s/: auth.yaml  ingress.yaml  reports.yaml
backend/libs/common/: pyproject.toml
backend/libs/common/config/: settings.py
backend/libs/common/domain/auth/: i_auth_service.py
backend/libs/common/domain/auth/models/db/: __init__.py  refresh_token.py  user.py
backend/libs/common/domain/auth/models/schemas/: request_otp.py
backend/libs/common/domain/reports/: i_report_service.py
backend/libs/common/domain/reports/models/db/: report.py
backend/libs/common/domain/reports/models/schemas/: create_report.py  read_report.py  update_report.py
backend/libs/common/infrastructure/db/: engine.py  session.py
backend/libs/common/infrastructure/redis/: redis_client.py
backend/libs/common/utils/: crypto.py
backend/scripts/: deploy-backend.sh  deploy-server.sh  dev-auth.sh  dev-reports.sh
backend/services/api_gateway/: Dockerfile  pyproject.toml
backend/services/auth/: Dockerfile  pyproject.toml
backend/services/auth/app/: email_sender.py  initial_setup.py  jwks_proxy.py  keycloak_facade.py  main.py
backend/services/auth/app/api/: dependencies.py  initial_setup.py  jwks_proxy.py  jwks_service.py  routes_auth.py
backend/services/auth/app/data/repositories/implementations/: redis_otp_repository.py  sqlalchemy_refresh_token_repository.py  sqlalchemy_user_repository.py
backend/services/auth/app/data/repositories/interfaces/: i_otp_repository.py  i_user_repository.py
backend/services/auth/app/domain/models/db/: user.py
backend/services/auth/app/domain/models/schemas/: request_otp.py
backend/services/auth/app/services/: auth_service.py  jwt_provider.py  otp_service.py  token_service.py
backend/services/auth/app/use_cases/: login.py  logout.py  refresh.py  register.py  request_otp.py  verify_otp.py
backend/services/auth/infrastructure/keycloak/: keycloak_adapter.py
backend/services/auth/src/: email_sender.py  main.py
backend/services/auth/src/api/: dependencies.py  routes_auth.py
backend/services/auth/src/data/repositories/implementations/: redis_otp_repository.py  sqlalchemy_refresh_token_repository.py  sqlalchemy_user_repository.py
backend/services/auth/src/data/repositories/interfaces/: i_token_repository.py  i_user_repository.py
backend/services/auth/src/domain/models/db/: refresh_token.py  user.py
backend/services/auth/src/domain/models/schemas/: request_otp.py
backend/services/auth/src/services/: auth_service.py  jwt_provider.py  otp_service.py  token_service.py
backend/services/reports/: Dockerfile  pyproject.toml
backend/services/reports/app/: main.py
backend/services/reports/app/api/: routes_reports.py
backend/services/reports/app/data/repositories/: report_repository.py
backend/services/reports/app/data/repositories/implemetations/: report_repository.py
backend/services/reports/app/data/repositories/interfaces/: i_report_repository.py
backend/services/reports/app/domain/: i_report_service.py
backend/services/reports/app/domain/models/db/: report.py
backend/services/reports/app/domain/models/schemas/: create_report.py  read_report.py  update_report.py
backend/services/reports/app/services/: report_service.py
backend/services/reports/src/: main.py
backend/services/reports/src/api/: routes_reports.py
backend/services/reports/src/data/repositories/implemetations/: report_repository.py
backend/services/reports/src/data/repositories/interfaces/: i_report_repository.py
backend/services/reports/src/domain/: i_report_service.py
backend/services/reports/src/domain/models/db/: report.py
backend/services/reports/src/domain/models/schemas/: create_report.py  read_report.py  update_report.py
backend/services/reports/src/services/: report_service.py
docker/: docker-compose.debug.yml  docker-compose.dev.yml
env/: .env.example
frontend/: pubspec.yaml
frontend/.dart_tool/: package_config.json  package_graph.json
frontend/apps/client_app/: pubspec.yaml
frontend/apps/client_app/lib/: main.dart
frontend/apps/client_app/lib/router/: auto_route.dart  auto_route.gr.dart
k8s/: auth.yaml  ingress.yaml
libs/common/src/common_lib/infrastructure/db/: engine.py  session.py
libs/common/src/common_lib/infrastructure/redis/: redis_client.py
scripts/: deploy-server.sh  dev-reports.sh
services/auth/: Dockerfile  pyproject.toml
services/auth/src/api/: dependencies.py
services/auth/src/data/repositories/implementations/: redis_otp_repository.py  sqlalchemy_refresh_token_repository.py
services/auth/src/data/repositories/interfaces/: i_refresh_token.py  i_user_repository.py
services/auth/src/domain/models/db/: refresh_token.py  user.py
services/auth/src/domain/models/schemas/: refresh_in.py  request_otp.py  verify_otp.py
services/auth/src/services/: auth_service.py  otp_service.py  token_service.py
services/reports/: Dockerfile  pyproject.toml
services/reports/src/: main.py
services/reports/src/api/: routes_reports.py
services/reports/src/domain/models/db/: report.py
services/reports/src/domain/models/enums/: report_status.py  report_type.py
services/reports/src/domain/models/schemas/: create_report.py  read_report.py  update_report.py
services/reports/src/services/: report_service.py
