[tool.poetry]
name = "problemka-monorepo"
version = "0.1.0"
description = "Monorepo for Problemka MTUCI backend"
authors = ["piksi <pitelinaksenia83412@gmail.com>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[workspace]
members = [
    "services/*",
    "libs/*"
]
