[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway service"
authors = ["piksi <pitelinaksenia83412@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
PyJWT = "^2.8.0"
cryptography = "^42.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

common = { path = "../../libs/common", develop = true }