[tool.poetry]
name = "api_gateway"
version = "0.1.0"
description = "API Gateway for microservices"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.0"
httpx = "^0.25.0"  # Для проксирования запросов к другим сервисам
pydantic = "^2.4.0"  # Если нужно для моделей

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"