[project]
name = "reports-service"
version = "0.1.0"
description = "Reports microservice"
authors = [
    {name = "piksi",email = "pitelinaksenia83412@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
