[tool.poetry]
name = "reports-service"
version = "0.1.0"
description = "Reports microservice"
authors = ["piksi <pitelinaksenia83412@gmail.com>"]
packages = [{ include = "common_lib", from = "../../libs/common/src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
requests = "^2.32.0"
aiosmtplib = "*"
pydantic = "^2.8.0"
sqlalchemy = "^2.0.22"
aiosqlite = "^0.21.0"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.0"
passlib = "*"
#aioredis = "*"
setuptools = "*"
#redis = { extras = ["async"], version = "^5.0" }
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.6.0"

[tool.poetry.group.local.dependencies]
debugpy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"